[package]
name = "vector-security-layer"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OpenAI"]
description = "Security-layer boundary crate for the Vector Network protocol"
repository = "https://example.invalid/vector-security-layer"
readme = "README.md"

[features]
default = ["std"]
std = []
persistence = []

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lib]
name = "vector_security_layer"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
